--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,9 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.13.2",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "course": "^0.0.1",
     "express": "^5.2.1",
-    "multer": "^2.0.2",
-    "mysql": "^2.18.1"
+    "pg": "^8.11.3",
+    "cors": "^2.8.5",
+    "body-parser": "^2.2.0"
   }
 }
